--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -137,7 +137,7 @@ The schedule for the different curricula are listed here:
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>
-        <td>Morning</td>
+        <td>Day 1</td>
         <td><a href="https://datacarpentry.org/organization-geospatial/">Introduction to Geospatial Concepts</a>
         </td>
       </tr>
@@ -146,7 +146,7 @@ The schedule for the different curricula are listed here:
         <td><a href="https://datacarpentry.org/r-intro-geospatial/">Introduction to R for Geospatial Data</a></td>
       </tr>
       <tr>
-        <td>Afternoon</td>
+        <td>Day 2</td>
         <td><a href="https://datacarpentry.org/r-intro-geospatial/">Introduction to R for Geospatial Data (continued)</a></td>
       </tr>
       <tr>
@@ -154,19 +154,19 @@ The schedule for the different curricula are listed here:
         <td><a href="https://datacarpentry.org/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 1)</td>
       </tr>
       <tr>
-        <td>Evening</td>
+        <td></td>
         <td>END</td>
       </tr>
     </table>
   </div>
 
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Day 3</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 2)</td></tr>
       <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 3)</td></tr>
       <tr>
-	<td>Evening</td>
+	<td>/td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr>
